v3.15.2
- Fixed: Only load Season info extractor and genre mappers config when enabled, fixes #136
- Fixed: 3.15.1 dont load/work on old DM800se, fixes #139
- Fixed: Missing default value from timeshift buffer path, fixes #140

v3.15.1
- Fixed: since 3.15.0 pvr manager cant start #134
- Added: Log Distro Version

v3.15.0
- Added: Support for Radio Groups
- Added: Create unique list of channels instead of a copy of each channel per group, fixes #101
- Fixed: hdd free space is wrong,  fixes #122
- Added: Device Settings - AutoTimer and Padding
- Added: PowerstateMode on exit, fixes #128
- Fixed: Store timer state on update, fixes #131
- Fixed: Updates not occuring at specified time and immediate update on timer event, fixes #130
- Added: Support different update modes for timers and recordings, fixes #125

v3.14.1
- Added: updated language files from Transifex

v3.14.0
- Added: Externalised season/episode and genre config to allow users support other formats/languages, closes #118
- Added: Server OpenWebIf version now reported by addon

v3.13.0
- Added: New setting to enable streaming over HTTPS
- Added: New setting to enable authentication for streaming

v3.12.6
- Fixed: Windows build fix
- Fixed: tsbuffer.ts never got deleted, fixes #115

v3.12.5
- Fixed: Large refactor for code organisation
- Fixed: Disk space, only for mounts configured for recordings - Requires OpenWebIf 1.3.5, fixes #112

v3.12.4
- Fixed: Used space instead of free space in GetDriveSpace - fixes #109
- Added: Genre id support from OTA feeds - Requires OpenWebIf 1.3.5

v3.12.3
- Fixed: Refactoring - Changed Directory structure, split out classes and added getters/setters #102
- Fixed: Updated readme without VU+ entries - Courtesy of Hedda
- Fixed: New temporary icon

v3.12.2
- Fixed: Refactoring - Conventions: includes, namesapce naming, public private order in class definition
- Fixed: GetInitialEPGForGroup called for each CHANNEL while initial EPG Update - #86

v3.12.1